fix: mejoras en el buscador en version tablet

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -125,7 +125,7 @@ $form-validation-states: (
       font-size: 1.5rem;
       color: $grisulado-100;
       position: relative;
-      top: -4px;
+      top: -3px;
       left: 15px;
     }
   }
@@ -190,7 +190,7 @@ $form-validation-states: (
       border: none;
       position: absolute;
       background: transparent $form-search-button-reset no-repeat center center;
-      top: 2px;
+      top: 1px;
       right: 42px;
     }
 
