--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -300,7 +300,7 @@ $navbar-btn-icon-height: 40px;
   @include media-breakpoint-up(md) {
     height: $navbar-height-desktop;
     padding-top: $navbar-padding-y-desktop;
-    padding-bottom: $navbar-padding-y-desktop;    
+    padding-bottom: $navbar-padding-y-desktop;
   }
 
   @include media-breakpoint-down(xs) {
@@ -491,7 +491,7 @@ $navbar-btn-icon-height: 40px;
           backface-visibility: visible;
         }
 
-        .nav-link{
+        .nav-link {
           padding: 12px;
           min-height: 48px;
         }
@@ -536,6 +536,29 @@ $navbar-btn-icon-height: 40px;
   }
 
   #navbarBrand {
+    @include media-breakpoint-up(md) {
+      display: block;
+    }
+  }
+
+  #navbarToggler {
+    @include media-breakpoint-up(md) {
+      .navbar-toggler {
+        margin-right: 0px !important;
+        margin-left: 10px !important;
+      }
+
+      display: block;
+    }
+  }
+
+  #navbarTogglerBack {
+    @include media-breakpoint-up(md) {
+      display: none;
+    }
+  }
+
+  #navbarSearch {
     @include media-breakpoint-up(md) {
       display: block;
     }
